k8s/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nossalista
  namespace: nossalista
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nossalista
  template:
    metadata:
      labels:
        app: nossalista
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: nossalista
          image: ghcr.io/leoferolive/nossalista:bootstrap
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "750m"
          startupProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 18
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 3
