k8s/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nossalista
  namespace: nossalista
  labels:
    app: nossalista
spec:
  selector:
    app: nossalista
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
